Fixed Bug where nav links didn't work on mobile

--- a/style.css
+++ b/style.css
@@ -713,6 +713,9 @@ SHAPES
     }.shape {
         visibility: hidden;
     }
+    .nav__link {
+        z-index: 100;
+    }
 }
 
 
